--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "framework": "nextjs",
   "buildCommand": "npm run build",
-  "installCommand": "npm install",
-  "regions": ["iad1"]
+  "installCommand": "npm install"
 }
